--- a/second semester/Homework9_task1/Tic_tac_toe/Tic_tac_toe/MainPage.xaml
+++ b/second semester/Homework9_task1/Tic_tac_toe/Tic_tac_toe/MainPage.xaml
@@ -3,10 +3,31 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d"
-    d:DesignHeight="300" d:DesignWidth="400">
-    <Grid x:Name="LayoutRoot" Background="White">
-        <Button x:Name="_1" Content="Button" HorizontalAlignment="Left" Margin="175,84,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click_1"/>
-        <Button Content="Button" HorizontalAlignment="Left" Margin="212,139,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click_1"/>
+    mc:Ignorable="d" Width="400.627" Height="278.731">
+    <Grid x:Name="LayoutRoot" Background="White" Margin="-43,0,-84,-78">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="0*"/>
+            <ColumnDefinition Width="73*"/>
+            <ColumnDefinition Width="4*"/>
+            <ColumnDefinition Width="451*"/>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="70*"/>
+            <RowDefinition Height="70*"/>
+            <RowDefinition Height="69*"/>
+            <RowDefinition Height="85*"/>
+            <RowDefinition Height="63*"/>
+        </Grid.RowDefinitions>
+        <Button Content="" Name="button1" HorizontalAlignment="Left" Margin="10,11,0,0" VerticalAlignment="Top" Width="112" Height="49" RenderTransformOrigin="0.176,-0.003" Grid.Column="3" Click="ButtonClick"/>
+        <Button Content="" Name="button2" HorizontalAlignment="Left" Margin="144,10,0,0" VerticalAlignment="Top" Width="112" Height="49" RenderTransformOrigin="0.176,-0.003" Grid.Column="3"  Click="ButtonClick"/>
+        <Button Content="" Name="button3" HorizontalAlignment="Left" Margin="279,11,0,0" VerticalAlignment="Top" Width="112" Height="49" RenderTransformOrigin="0.176,-0.003" Grid.Column="3"  Click="ButtonClick"/>
+        <Button Content="" Name="button4" HorizontalAlignment="Left" VerticalAlignment="Top" Width="112" Height="49" RenderTransformOrigin="0.176,-0.003" Grid.Column="3" Grid.Row="1" Margin="10,6,0,0"  Click="ButtonClick"/>
+        <Button Content="" Name="button5" HorizontalAlignment="Left" Margin="144,7,0,0" VerticalAlignment="Top" Width="112" Height="49" RenderTransformOrigin="0.176,-0.003" Grid.Column="3" Grid.Row="1"  Click="ButtonClick"/>
+        <Button Content="" Name="button6" HorizontalAlignment="Left" Margin="279,7,0,0" VerticalAlignment="Top" Width="112" Height="49" RenderTransformOrigin="0.176,-0.003" Grid.Column="3" Grid.Row="1"  Click="ButtonClick"/>
+        <Button Content="X" Name="ChangeX" HorizontalAlignment="Left" Margin="102,36,0,0" VerticalAlignment="Top" Width="75" RenderTransformOrigin="-0.471,-0.474" Grid.Row="3" Grid.Column="3" Height="22"  Click="ButtonClick"/>
+        <Button Content="0" Name="Change0" HorizontalAlignment="Left" Margin="243,35,0,0" VerticalAlignment="Top" Width="75" RenderTransformOrigin="-0.471,-0.474" Grid.Row="3" Grid.Column="3" Height="22" Click="ButtonClick"/>
+        <Button Content="" Name="button7" HorizontalAlignment="Left" VerticalAlignment="Top" Width="112" Height="49" RenderTransformOrigin="0.176,-0.003" Grid.Column="3" Grid.Row="2" Margin="10,10,0,0" Click="ButtonClick" />
+            <Button Content="" Name="button8" HorizontalAlignment="Left" VerticalAlignment="Top" Width="112" Height="49" RenderTransformOrigin="0.176,-0.003" Grid.Column="3" Grid.Row="2" Margin="144,10,0,0"  Click="ButtonClick"/>
+            <Button Content="" Name="button9" HorizontalAlignment="Left" VerticalAlignment="Top" Width="112" Height="49" RenderTransformOrigin="0.176,-0.003" Grid.Column="3" Grid.Row="2" Margin="279,10,0,0"  Click="ButtonClick"/>
     </Grid>
 </UserControl>
