--- a/QT/gun/mainwindow.ui
+++ b/QT/gun/mainwindow.ui
@@ -14,17 +14,14 @@
    <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralWidget">
-   <widget class="QPushButton" name="pushButton">
+   <widget class="QGraphicsView" name="graphicsView">
     <property name="geometry">
      <rect>
       <x>0</x>
-      <y>220</y>
-      <width>75</width>
-      <height>23</height>
+      <y>-10</y>
+      <width>401</width>
+      <height>281</height>
      </rect>
-    </property>
-    <property name="text">
-     <string>PushButton</string>
     </property>
    </widget>
   </widget>
