--- a/QT/gun/mainwindow.ui
+++ b/QT/gun/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>400</width>
-    <height>300</height>
+    <width>548</width>
+    <height>438</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -18,10 +18,88 @@
     <property name="geometry">
      <rect>
       <x>0</x>
-      <y>-10</y>
-      <width>401</width>
-      <height>281</height>
+      <y>10</y>
+      <width>521</width>
+      <height>371</height>
      </rect>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="buttonUp">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>340</y>
+      <width>91</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>UP</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="buttonDown">
+    <property name="geometry">
+     <rect>
+      <x>110</x>
+      <y>340</y>
+      <width>91</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>DOWN</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="buttonFire">
+    <property name="geometry">
+     <rect>
+      <x>210</x>
+      <y>340</y>
+      <width>91</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>FIRE</string>
+    </property>
+   </widget>
+   <widget class="QRadioButton" name="slowly">
+    <property name="geometry">
+     <rect>
+      <x>310</x>
+      <y>350</y>
+      <width>61</width>
+      <height>17</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>SLOWLY</string>
+    </property>
+   </widget>
+   <widget class="QRadioButton" name="medium">
+    <property name="geometry">
+     <rect>
+      <x>380</x>
+      <y>350</y>
+      <width>61</width>
+      <height>17</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>MEDIUM</string>
+    </property>
+   </widget>
+   <widget class="QRadioButton" name="quickly">
+    <property name="geometry">
+     <rect>
+      <x>450</x>
+      <y>350</y>
+      <width>61</width>
+      <height>17</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>QUICKLY</string>
     </property>
    </widget>
   </widget>
@@ -30,7 +108,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>400</width>
+     <width>548</width>
      <height>21</height>
     </rect>
    </property>
