--- a/QT/gun/mainwindow.ui
+++ b/QT/gun/mainwindow.ui
@@ -6,9 +6,21 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>548</width>
-    <height>438</height>
+    <width>551</width>
+    <height>440</height>
    </rect>
+  </property>
+  <property name="minimumSize">
+   <size>
+    <width>551</width>
+    <height>440</height>
+   </size>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>551</width>
+    <height>440</height>
+   </size>
   </property>
   <property name="windowTitle">
    <string>MainWindow</string>
@@ -108,7 +120,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>548</width>
+     <width>551</width>
      <height>21</height>
     </rect>
    </property>
